--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-elia.sqlite
+elia_chat/.db
+# elia.sqlite
 **/*.pyc
 resources/conversations.json
